fixing more arabic language bugs

--- a/Plateforme/locale/ar/LC_MESSAGES/django.po
+++ b/Plateforme/locale/ar/LC_MESSAGES/django.po
@@ -559,7 +559,7 @@ msgstr "أداة البرمجة اللغوية"
 #: .\templates\base_admin.html:45 .\templates\resources\corpus_list.html:3
 #: .\templates\resources\list.html:65 .\templates\resources\list.html:108
 msgid "Corpus"
-msgstr "مجموعة"
+msgstr "المجموعة"
 
 #: .\resources\forms.py:13 .\resources\models.py:265
 msgid "Document"
@@ -606,6 +606,7 @@ msgstr "رابط الوصول"
 #: .\resources\forms.py:52
 msgid "Language *"
 msgstr "لغة"
+
 
 #: .\resources\forms.py:61 .\resources\forms.py:125
 msgid "Field of Study *"
@@ -1682,6 +1683,8 @@ msgstr "مجموعة جديدة"
 msgid "Search"
 msgstr "البحث"
 
+
+
 #: .\templates\admin\corpora.html:434 .\templates\admin\history.html:300
 #: .\templates\admin\tools.html:422 .\templates\admin\users.html:128
 #: .\templates\events\event_list.html:153
@@ -1822,7 +1825,7 @@ msgstr "/ شهر"
 #: .\templates\admin\dashboard.html:362 .\templates\admin\statistics.html:204
 #: .\templates\base.html:215 .\templates\resources\resource_detail.html:10
 msgid "Resources"
-msgstr "موارد"
+msgstr "الموارد"
 
 #: .\templates\admin\dashboard.html:389 .\templates\base_admin.html:55
 #: .\templates\institutions\institution_detail.html:133
@@ -2246,7 +2249,7 @@ msgstr "تاريخ الانتهاء"
 
 #: .\templates\admin\statistics.html:217
 msgid "Active projects"
-msgstr "Active Projects"
+msgstr "المشاريع الحالية"
 
 #: .\templates\admin\statistics.html:234
 msgid "User registrations"
@@ -2460,7 +2463,7 @@ msgstr "منصة البرمجة اللغوية العربية"
 
 #: .\templates\base.html:58
 msgid "Arabic NLP"
-msgstr "العربية"
+msgstr "البرمجة اللغوية الطبيعية العربية"
 
 #: .\templates\base.html:65
 msgid "Search resources,tools,corpus..."
@@ -2498,7 +2501,7 @@ msgstr "الرئيسية"
 #: .\templates\base.html:212 .\templates\base.html:290
 #: .\templates\resources\list.html:63 .\templates\resources\list.html:100
 msgid "Tools"
-msgstr "أدوات"
+msgstr "الأدوات"
 
 #: .\templates\base.html:218 .\templates\base.html:299
 msgid "Research Projects"
@@ -2506,11 +2509,11 @@ msgstr "المشاريع البحثية"
 
 #: .\templates\base.html:221 .\templates\base.html:296
 msgid "Community"
-msgstr "مجتمع"
+msgstr "المجتمع"
 
 #: .\templates\base.html:224
 msgid "News"
-msgstr "أخبار"
+msgstr "الأخبار"
 
 #: .\templates\base.html:242
 msgid "Admin"
@@ -2527,6 +2530,10 @@ msgstr ""
 #: .\templates\base.html:291 .\templates\resources\list.html:3
 msgid "All Resources"
 msgstr "جميع الموارد"
+
+#: .\templates\resources\list.html:37
+msgid "Search for resources..."
+msgstr "البحث في الموارد"
 
 #: .\templates\base.html:298 .\templates\base_admin.html:65
 msgid "Forum"
