fixing project page traduction bugs

--- a/Plateforme/locale/ar/LC_MESSAGES/django.po
+++ b/Plateforme/locale/ar/LC_MESSAGES/django.po
@@ -760,11 +760,7 @@ msgstr "أداة البرمجة اللغوية"
 #: .\templates\base_admin.html:45 .\templates\resources\corpus_list.html:3
 #: .\templates\resources\list.html:100
 msgid "Corpus"
-<<<<<<< HEAD
-msgstr "المجموعة"
-=======
-msgstr "مدونة"
->>>>>>> origin/fix/translation
+msgstr "المدونة"
 
 #: .\resources\forms.py:13 .\resources\models.py:265
 msgid "Document"
@@ -1183,13 +1179,11 @@ msgid "Theses"
 msgstr "الأطروحات"
 
 #: .\resources\models.py:365
-#, fuzzy
 #| msgid "memoire"
 msgid "memoir"
 msgstr "مذكرة"
 
 #: .\resources\models.py:366 .\templates\resources\list.html:88
-#, fuzzy
 #| msgid "Memoires"
 msgid "Memoirs"
 msgstr "مذكرات"
@@ -1892,23 +1886,10 @@ msgstr "مدونة جديدة"
 msgid "Search"
 msgstr "بحث"
 
-<<<<<<< HEAD
-
-
-#: .\templates\admin\corpora.html:434 .\templates\admin\history.html:300
-#: .\templates\admin\tools.html:422 .\templates\admin\users.html:128
-#: .\templates\events\event_list.html:153
-=======
-#: .\templates\admin\corpora.html:522 .\templates\admin\tools.html:539
-#, fuzzy
-#| msgid "Search by name or email..."
-msgid "Search by title, author, description..."
-msgstr "البحث حسب الاسم أو البريد الإلكتروني..."
 
 #: .\templates\admin\corpora.html:527 .\templates\admin\history.html:300
 #: .\templates\admin\publications.html:244 .\templates\admin\tools.html:544
 #: .\templates\admin\users.html:128 .\templates\events\event_list.html:153
->>>>>>> origin/fix/translation
 #: .\templates\institutions\institution_list.html:40
 msgid "Reset"
 msgstr "إعادة تعيين"
@@ -2054,6 +2035,26 @@ msgstr "الموارد"
 #: .\templates\institutions\institution_detail.html:133
 msgid "Projects"
 msgstr "المشاريع"
+
+#: .\projects\templates\project_list.html:3
+msgid "Projects - Arabic TAL Research"
+msgstr "المشاريع"
+
+#: .\projects\templates\project_list.html:59
+msgid "New Project"
+msgstr "اضافة مشروع"
+
+#: .\projects\templates\project_list.html:14
+msgid "Search for a project..."
+msgstr "البحث عن المشاريع"
+
+#: .\projects\templates\project_list.html:79
+msgid "My projects"
+msgstr "مشاريعي"
+
+#: .\projects\templates\project_list.html:185
+msgid "No projects are available at the moment."
+msgstr "لا توجد مشاريع متاحة في الوقت الحالي."
 
 #: .\templates\admin\dashboard.html:397
 msgid " / month"
@@ -2410,15 +2411,9 @@ msgstr "تاريخ البدء"
 msgid "End date"
 msgstr "تاريخ الانتهاء"
 
-<<<<<<< HEAD
-#: .\templates\admin\statistics.html:217
-msgid "Active projects"
-msgstr "المشاريع الحالية"
-=======
 #: .\templates\admin\publications.html:246
 msgid "Filtrer"
 msgstr "ترشيح"
->>>>>>> origin/fix/translation
 
 #: .\templates\admin\publications.html:256
 #, fuzzy
@@ -2763,15 +2758,11 @@ msgstr ""
 msgid "All Resources"
 msgstr "جميع الموارد"
 
-<<<<<<< HEAD
 #: .\templates\resources\list.html:37
 msgid "Search for resources..."
 msgstr "البحث في الموارد"
 
 #: .\templates\base.html:298 .\templates\base_admin.html:65
-=======
-#: .\templates\base.html:301 .\templates\base_admin.html:65
->>>>>>> origin/fix/translation
 msgid "Forum"
 msgstr "المنتدى"
 
@@ -3505,11 +3496,7 @@ msgstr "المدونة المتاحة"
 
 #: .\templates\home.html:48
 msgid "Active Projects"
-<<<<<<< HEAD
 msgstr "المشاريع الحالية"
-=======
-msgstr "المشاريع النشطة"
->>>>>>> origin/fix/translation
 
 #: .\templates\home.html:52
 msgid "Community Members"
@@ -3989,12 +3976,6 @@ msgstr "الموارد المتاحة"
 #: .\templates\resources\list.html:20
 msgid "Add Resource"
 msgstr "إضافة مورد"
-
-#: .\templates\resources\list.html:37
-#, fuzzy
-#| msgid "Research Resources"
-msgid "Search for resources"
-msgstr "موارد البحث"
 
 #: .\templates\resources\list.html:48
 msgid "Chargement..."
