fixing arabic translation bugs for institutions and events and qa

--- a/Plateforme/locale/ar/LC_MESSAGES/django.po
+++ b/Plateforme/locale/ar/LC_MESSAGES/django.po
@@ -117,6 +117,10 @@ msgstr "نوع الحدث"
 msgid "Domains"
 msgstr "المجالات"
 
+#: .\events\forms.py:50
+msgid "All Domains"
+msgstr "كل المجالات"
+
 #: .\events\models.py:43
 msgid "Comma-separated domains"
 msgstr "مجالات مفصولة بفواصل "
@@ -1131,6 +1135,18 @@ msgstr "المعلم المسؤول"
 msgid "Full name of the teacher"
 msgstr "الاسم الكامل للمعلم"
 
+#: .\institutions\models.py:41
+msgid "School"
+msgstr "مدرسة"
+
+#: .\institutions\models.py:42
+msgid "University"
+msgstr "جامعة"
+
+#: .\institutions\models.py:43
+msgid "Research Center"
+msgstr "مركز ابحاث"
+
 #: .\resources\models.py:208
 msgid "University or school offering the course"
 msgstr "الجامعة أو المدرسة التي تقدم الدورة"
@@ -1900,7 +1916,7 @@ msgstr "إعادة تعيين"
 #: .\templates\contact\contact_list.html:113
 #: .\templates\events\event_list.html:60
 msgid "Filter"
-msgstr "ترشيح (filter)"
+msgstr "ترشيح"
 
 #: .\templates\admin\corpora.html:540 .\templates\admin\courses.html:538
 msgid "Creation date"
