--- a/Plateforme/locale/ar/LC_MESSAGES/django.po
+++ b/Plateforme/locale/ar/LC_MESSAGES/django.po
@@ -2406,13 +2406,14 @@ msgstr "التالي"
 
 #: .\templates\admin\publications.html:1
 #: .\templates\admin\publications.html:202
-#, fuzzy
-#| msgid "Publication Date"
 msgid "Publication management"
-msgstr "تاريخ النشر"
+msgstr "ادارة المنشورات"
+
+#: .\templates\admin\publications.html:220
+msgid "Title, author..."
+msgstr "البحث"
 
 #: .\templates\admin\publications.html:207
-#, fuzzy
 #| msgid "Voir la publication"
 msgid "Add a publication"
 msgstr "رؤية المنشور"
