fixing title in header as the professor told us

--- a/Plateforme/locale/ar/LC_MESSAGES/django.po
+++ b/Plateforme/locale/ar/LC_MESSAGES/django.po
@@ -2946,11 +2946,11 @@ msgstr "ملفي الشخصي"
 #: .\templates\base.html:9 .\templates\base.html:289
 #: .\templates\contact\contact.html:5 .\templates\events\event_list.html:4
 msgid "Arabic NLP Platform"
-msgstr "منصة البرمجة اللغوية الطبيعية العربية"
+msgstr "المنصة الجزائرية لتكنولوجيات اللغة والذكاء الاصطناعي خدمة للغة العربية"
 
 #: .\templates\base.html:50
 msgid "Arabic NLP"
-msgstr "البرمجة اللغوية الطبيعية العربية"
+msgstr "المنصة الجزائرية لتكنولوجيات اللغة والذكاء الاصطناعي خدمة للغة العربية"
 
 #: .\templates\base.html:57
 msgid "Search resources,tools,corpus..."
@@ -3712,7 +3712,7 @@ msgstr "تأكيد رفع الحظر"
 
 #: .\templates\home.html:7
 msgid "Welcome to Arabic NLP Platform"
-msgstr "مرحباً بكم في منصة معالجة اللغة العربية"
+msgstr "مرحباً بكم في المنصة الجزائرية لتكنولوجيات اللغة والذكاء الاصطناعي خدمة للغة العربية  "
 
 #: .\templates\home.html:9
 msgid ""
